--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
         <title>Masoud {%block title%}{%endblock%}</title>
         <link rel="icon" type="image/x-icon" href="{% static 'blog/assets/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script> -->
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'blog/css/styles.css' %}" rel="stylesheet" />
