--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -18,9 +18,9 @@
 </header>
  <!-- Post Content-->
  <article class="mb-4">
-    <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto text-jjustify">
               {{article.description|linebreaks}}  
               <!--خط بالا برای جدا کردن پاراگراف ها در فارسی به کار می‌رود.-->  
             </div>
