--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,16 +1,18 @@
  {% extends 'blog/base.html' %}
+ {% load static %}
 
  {% block title %} | {{article.title}}{% endblock %}
 
  {% block main %}
+ <link href="{% static 'blog/css/rtl.css' %}" rel="stylesheet" />
  <!-- Page Header-->
  <header class="masthead" style="background-image: url('{{article.thumbnail.url}}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>covid diagnosis</h1>
-                    <span class="subheading">detect covid-19 by CT-Scan images</span>
+                    <h1>{{article.title}}</h1>
+                    <time>{{article.jpublish}}</time>
                 </div>
             </div>
         </div>
@@ -20,7 +22,7 @@
  <article class="mb-4">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto text-jjustify">
+            <div class="col-lg-8 col-md-10 mx-auto text-justify">
               {{article.description|linebreaks}}  
               <!--خط بالا برای جدا کردن پاراگراف ها در فارسی به کار می‌رود.-->  
             </div>
