--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -42,7 +42,14 @@
             <hr class="my-4" />
             {% endfor %}
             <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4 pager-button"><a class="btn btn-primary text-uppercase" href="#!">پست‌های قدیمی &larr;</a></div>
+            <div class="d-flex justify-content-end mb-4 pager-button">
+                {% if articles.has_previous %}
+                <a class="btn btn-primary float-right ml-3" href="{% url 'blog:home' articles.previous_page_number %}">&rarr; پست‌های جدید</a>
+                {% endif %}
+                {% if articles.has_next %}
+                <a class="btn btn-primary float-right" href="{% url 'blog:home' articles.next_page_number %}">پست‌های قدیمی &larr;</a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
