--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -22,7 +22,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             <h3 class="alert alert-primary text-center">دسته‌بندی: {{category.title}}</h3>
-            {% for article in category.articles.published %}
+            {% for article in articles %}
             <div class="post-preview">
                 <a href="{% url 'blog:detail' article.slug %}">
                     <h2 class="post-title">{{article.title}}</h2>
@@ -42,9 +42,16 @@
             <!-- Divider-->
             <hr class="my-4" />
             {% endfor %}
-            <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4 pager-button"><a class="btn btn-primary text-uppercase" href="#!">پست‌های قدیمی &larr;</a></div>
-        </div>
+            <!-- pager -->
+                <div class="d-flex justify-content-end mb-4 pager-button">
+                    {% if articles.has_previous %}
+                    <a class="btn btn-primary float-right ml-3" href="{% url 'blog:category' category.slug articles.previous_page_number %}">&rarr; پست‌های جدید</a>
+                    {% endif %}
+                    {% if articles.has_next %}
+                    <a class="btn btn-primary float-right" href="{% url 'blog:category' category.slug articles.next_page_number %}">پست‌های قدیمی &larr;</a>
+                    {% endif %}
+                </div>
+            </div>
     </div>
 </div>
 {% endblock %}
