--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -21,7 +21,7 @@
 <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
-            {% for article in articles %}
+            {% for article in object_list %}
             <div class="post-preview">
                 <a href="{% url 'blog:detail' article.slug %}">
                     <h2 class="post-title">{{article.title}}</h2>
@@ -42,14 +42,16 @@
             <hr class="my-4" />
             {% endfor %}
             <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4 pager-button">
-                {% if articles.has_previous %}
-                <a class="btn btn-primary float-right ml-3" href="{% url 'blog:home' articles.previous_page_number %}">&rarr; پست‌های جدید</a>
-                {% endif %}
-                {% if articles.has_next %}
-                <a class="btn btn-primary float-right" href="{% url 'blog:home' articles.next_page_number %}">پست‌های قدیمی &larr;</a>
-                {% endif %}
-            </div>
+            {% if is_paginated %}
+                <div class="d-flex justify-content-end mb-4 pager-button">
+                    {% if page_obj.has_previous %}
+                    <a class="btn btn-primary float-right ml-3" href="{% url 'blog:home' page_obj.previous_page_number %}">&rarr; پست‌های جدید</a>
+                    {% endif %}
+                    {% if page_obj.has_next %}
+                    <a class="btn btn-primary float-right" href="{% url 'blog:home' page_obj.next_page_number %}">پست‌های قدیمی &larr;</a>
+                    {% endif %}
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
