--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -1,18 +1,18 @@
  {% extends 'blog/base.html' %}
  {% load static %}
 
- {% block title %} | {{article.title}}{% endblock %}
+ {% block title %} | {{object.title}}{% endblock %}
 
  {% block main %}
  <link href="{% static 'blog/css/rtl.css' %}" rel="stylesheet" />
  <!-- Page Header-->
- <header class="masthead" style="background-image: url('{{article.thumbnail.url}}')">
+ <header class="masthead" style="background-image: url('{{object.thumbnail.url}}')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>{{article.title}}</h1>
-                    <time>{{article.jpublish}}</time>
+                    <h1>{{object.title}}</h1>
+                    <time>{{object.jpublish}}</time>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto text-justify">
-              {{article.description|linebreaks}}  
+              {{object.description|linebreaks}}  
               <!--خط بالا برای جدا کردن پاراگراف ها در فارسی به کار می‌رود.-->  
             </div>
         </div>
