improve in html pages, creat blocks,...

--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -1,58 +1,12 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/list.html' %}
 
-{% load static %}
+{% block header %}{% endblock %}
 
-{% block main %}
- <!-- Page Header-->
- <header class="masthead" style="background-image: url('{% static 'blog/assets/img/home-bg.jpg' %}')">
-    <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="site-heading">
-                    <h1>covid diagnosis</h1>
-                    <span class="subheading">detect covid-19 by CT-Scan images</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+{% block previous_page_url %}
+{% url 'blog:home' page_obj.previous_page_number %}
+{% endblock %}
 
-<!-- Main Content-->
-<div class="container px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-            {% for article in object_list %}
-            <div class="post-preview">
-                <a href="{% url 'blog:detail' article.slug %}">
-                    <h2 class="post-title">{{article.title}}</h2>
-                    <h3 class="post-subtitle">{{article.description|truncatewords:30}}</h3>
-                </a>
-                <p class="post-meta">
-                    نویسنده:
-                    <a href="#!">مسعود</a>
-                    {{article.jpublish}}
-                </p>
-                <div>
-                    {% for cat in article.category_published.all %}
-                    <a href="{% url 'blog:category' cat.slug %}">#{{cat.title}}</a>
-                    {% endfor %}
-                </div>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
-            {% endfor %}
-            <!-- Pager-->
-            {% if is_paginated %}
-                <div class="d-flex justify-content-end mb-4 pager-button">
-                    {% if page_obj.has_previous %}
-                    <a class="btn btn-primary float-right ml-3" href="{% url 'blog:home' page_obj.previous_page_number %}">&rarr; پست‌های جدید</a>
-                    {% endif %}
-                    {% if page_obj.has_next %}
-                    <a class="btn btn-primary float-right" href="{% url 'blog:home' page_obj.next_page_number %}">پست‌های قدیمی &larr;</a>
-                    {% endif %}
-                </div>
-            {% endif %}
-        </div>
-    </div>
-</div>
+
+{% block next_page_url %}
+{% url 'blog:home' page_obj.next_page_number %}
 {% endblock %}
