--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -32,7 +32,7 @@
                 </a>
                 <p class="post-meta">
                     نویسنده:
-                    <a href="#!">مسعود</a>
+                    <a href="{% url 'blog:author' article.author %}">{{article.author.get_full_name}}</a>
                     {{article.jpublish}}
                 </p>
                 <div>
