--- a/templates/blog/article_detail.html
+++ b/templates/blog/article_detail.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto text-justify">
-              {{object.description|linebreaks}}  
+              {{object.description|safe}}  
               <!--خط بالا برای جدا کردن پاراگراف ها در فارسی به کار می‌رود.-->  
             </div>
         </div>
