--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -6,6 +6,7 @@
 
 {% block main %}
  <div class="row">
+  {% if object_list %}
     <div class="col-12">
       <div class="card">
         <!-- /.card-header -->
@@ -28,7 +29,7 @@
                     <td>
                       {% if article.status == 'd' or user.is_superuser %}
                         <a href="{% url 'account:article-update' article.pk %}">{{article.title}}</a>
-                     
+                    
                       {% else %}
                         {{article.title}}
                       {% endif %}
@@ -59,5 +60,9 @@
       </div>
       <!-- /.card -->
     </div>
-  </div>
+  {% else %}
+    <h3>محتوایی برای نمایش وجود ندارد</h3>
+    
+  {% endif %}
+ </div>
 {% endblock %}
