--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -45,7 +45,10 @@
                         <a target="_blank" class="badge badge-primary" href="{% url 'blog:detail' article.slug %}">دیدن مقاله در سایت</a>
 
                         {% else %}
-                        <span class="badge badge-danger">پیش نویس</span>
+                        <div class="badge badge-danger">پیش نویس</div>
+                        <div>
+                        <a target="_blank" class="badge badge-secondary" href="{% url 'blog:preview' article.pk %}">پیش نمایش</a>
+                        </div>
                         {% endif %}
                         {% if user.is_superuser %}
                           <a class="badge text-danger" href="{% url 'account:article-delete' article.pk %}">حذف مقاله</a>
