--- a/templates/registration/home.html
+++ b/templates/registration/home.html
@@ -27,7 +27,7 @@
               {% for article in object_list %}
                 <tr>
                     <td>
-                      {% if article.status == 'd' or user.is_superuser %}
+                      {% if article.status in 'bd'|make_list or user.is_superuser %}
                         <a href="{% url 'account:article-update' article.pk %}">{{article.title}}</a>
                     
                       {% else %}
@@ -43,12 +43,24 @@
                         {% if article.status == 'p' %}
                         <span class="badge badge-success">منتشر شده</span>
                         <a target="_blank" class="badge badge-primary" href="{% url 'blog:detail' article.slug %}">دیدن مقاله در سایت</a>
-
+                        {% elif article.status == 'i' %}
+                        <span class="badge" style="background-color: #1daddda6;">در حال بررسی</span>
+                          {% if user.is_superuser %}
+                            <div>
+                              <a target="_blank" class="badge badge-secondary" href="{% url 'blog:preview' article.pk %}">پیش نمایش</a>
+                            </div>
+                          {% endif %}
                         {% else %}
-                        <div class="badge badge-danger">پیش نویس</div>
-                        <div>
-                        <a target="_blank" class="badge badge-secondary" href="{% url 'blog:preview' article.pk %}">پیش نمایش</a>
-                        </div>
+                     
+                          {% if article.status == 'd' %}
+                          <div class="badge badge-danger">پیش نویس</div>
+                          <div>
+                          {% else %}
+                          <div class="badge badge-warning">برگشت‌داده‌شده</div>
+                          {% endif %}
+                          
+                          <a target="_blank" class="badge badge-secondary" href="{% url 'blog:preview' article.pk %}">پیش نمایش</a>
+                          </div>
                         {% endif %}
                         {% if user.is_superuser %}
                           <a class="badge text-danger" href="{% url 'account:article-delete' article.pk %}">حذف مقاله</a>
