--- a/templates/blog/article_detail.html
+++ b/templates/blog/article_detail.html
@@ -23,8 +23,19 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto text-justify">
-              {{object.description|safe}}  
-              <!--خط بالا برای جدا کردن پاراگراف ها در فارسی به کار می‌رود.-->  
+                {% if object.is_special %}  
+                    {% if user.is_authenticated and user.is_special_user or user == object.author or user.is_superuser %}
+                        {{object.description|safe}}
+                    
+                    {% else %}
+                        <p>این مقاله ویژه است. برای مشاهده‌ی آن باید <a href="#">اشتراک ویژه </a>تهیه کنید</p>
+                    {% endif %}
+
+                {% else %}  
+                    {{object.description|safe}} 
+                <!--خط بالا برای جدا کردن پاراگراف ها در فارسی به کار می‌رود.-->  
+               
+                {% endif %}   
             </div>
         </div>
     </div>
