--- a/templates/registration/partials/link.html
+++ b/templates/registration/partials/link.html
@@ -4,6 +4,6 @@
         active
     {% endif %}"
 >
-    <i class="fa fa-list nav-icon"></i>
+    <i class="fa {{classes}} nav-icon"></i>
     <p>{{content}}</p>
   </a>
