--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -37,11 +37,11 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                {% link request 'home' 'لیست مقالات' %}
+                {% link request 'home' 'لیست مقالات' 'fa-list' %}
               </li>
               <li class="nav-item">
     
-                  {% link request 'article-create' 'افزودن مقاله' %}
+                  {% link request 'article-create' 'افزودن مقاله' 'fa-edit' %}
                 
               </li>
               <!-- <li class="nav-item">
