--- a/templates/registration/sidebar.html
+++ b/templates/registration/sidebar.html
@@ -53,13 +53,15 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="pages/widgets.html" class="nav-link">
+            {% link request 'profile' 'پروفایل' 'fas fa-th' %}
+
+            <!-- <a href="pages/widgets.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 پروفایل
                 <span class="right badge badge-danger">جدید</span>
               </p>
-            </a>
+            </a> -->
           </li>
             <!-- <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
