--- a/templates/registration/article-create-update.html
+++ b/templates/registration/article-create-update.html
@@ -37,12 +37,15 @@
                         {% if user.is_superuser %}
                             <div class="col-6">
                                 {{ form.author|as_crispy_field }}
-                                {{ form.is_special|as_crispy_field }}
+                                
                             </div>
                             <div class="col-6">
                                 {{ form.status|as_crispy_field }}
                             </div>
                         {% endif %}
+                        <div class="col-6">
+                            {{ form.is_special|as_crispy_field }}
+                        </div>
                 
                     </div>
                     <button class="btn btn-success">ارسال مقاله</button>
