--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -78,6 +78,8 @@
 						{% endif %}
 						<span class="focus-input100" data-placeholder="گذرواژه"></span>
 					</div>
+					
+					<a href="{% url 'password_reset' %}" class="myfont">فراموشی گذرواژه</a>
 
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
